--- a/requirements.txt
+++ b/requirements.txt
@@ -1,67 +1,44 @@
-annotated-types
-anyio
-apscheduler
-certifi
-charset-normalizer
-click
-colorama
-contourpy
-cycler
-dnspython
-email-validator
-fastapi
-fastapi-cli
-fastapi-cloud-cli
-fonttools
-h11
-httpcore
-httptools
-httpx
-idna
-jinja2
-joblib
-kiwisolver
-markdown-it-py
-markupsafe
-matplotlib
-mdurl
-numpy
-packaging
-pandas
-pillow
-pydantic
-pydantic-core
-pygments
-pyparsing
-python-dateutil
-python-dotenv
-python-multipart
-pytz
-pyyaml
-requests
-rich
-rich-toolkit
-rignore
-scikit-learn
-scipy
-seaborn
-sentry-sdk
-shellingham
-six
-sniffio
-starlette
-threadpoolctl
-tqdm
-typer
-typing-extensions
-typing-inspection
-tzdata
-tzlocal
-urllib3
-uvicorn
-watchfiles
-websockets
-xgboost
-xmltodict
-gunicorn
--e .
+annotated-types==0.7.0
+anyio==4.10.0
+apscheduler==3.11.0
+certifi==2025.8.3
+charset-normalizer==3.4.3
+click==8.2.1
+colorama==0.4.6
+contourpy==1.3.3
+cycler==0.12.1
+fastapi==0.116.1
+fonttools==4.59.1
+gunicorn==23.0.0
+h11==0.16.0
+idna==3.10
+joblib==1.5.1
+kiwisolver==1.4.9
+matplotlib==3.10.5
+numpy==2.3.2
+packaging==25.0
+pandas==2.3.1
+pillow==11.3.0
+pydantic==2.11.7
+pydantic-core==2.33.2
+pyparsing==3.2.3
+python-dateutil==2.9.0.post0
+python-dotenv==1.1.1
+pytz==2025.2
+requests==2.32.4
+scikit-learn==1.7.1
+scipy==1.16.1
+seaborn==0.13.2
+six==1.17.0
+sniffio==1.3.1
+starlette==0.47.2
+threadpoolctl==3.6.0
+tqdm==4.67.1
+typing-extensions==4.14.1
+typing-inspection==0.4.1
+tzdata==2025.2
+tzlocal==5.3.1
+urllib3==2.5.0
+uvicorn==0.35.0
+xgboost==3.0.4
+xmltodict==0.14.2
